[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://ui/PlayScreen.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://ui/components/GameBoard.tscn" id="2_board"]
[ext_resource type="PackedScene" path="res://ui/components/MenuButton.tscn" id="3_btn"]

[node name="PlayScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.984314, 0.968627, 0.941176, 1)

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="Title" type="Label" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.466667, 0.431373, 0.396078, 1)
theme_override_font_sizes/font_size = 64
text = "2048"

[node name="ScoreBox" type="VBoxContainer" parent="Header"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Header/ScoreBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.431373, 0.396078, 1)
text = "SCORE"
horizontal_alignment = 1

[node name="Value" type="Label" parent="Header/ScoreBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.431373, 0.396078, 1)
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1

[node name="BestBox" type="VBoxContainer" parent="Header"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Header/BestBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.431373, 0.396078, 1)
text = "BEST"
horizontal_alignment = 1

[node name="Value" type="Label" parent="Header/BestBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.431373, 0.396078, 1)
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1

[node name="BoardContainer" parent="." instance=ExtResource("2_board")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.682353)

[node name="Label" type="Label" parent="GameOverOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -34.0
offset_right = 163.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "GAME OVER"

[node name="Label2" type="Label" parent="GameOverOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = 37.0
offset_right = 84.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnBack" parent="." instance=ExtResource("3_btn")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = -40.0
grow_horizontal = 1
grow_vertical = 0
text = "BACK"
bg_color = Color(0.784314, 0.196078, 0.196078, 1)

[node name="BtnReset" parent="." instance=ExtResource("3_btn")]
layout_mode = 0
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -120.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
text = "RESET"
bg_color = Color(0.196078, 0.705882, 0.196078, 1)
